[1.14.1]

[1.14.0]
- [BREAKING CHANGE] API: Pools changes in 1.13.5 have been partially reverted. Pools#get/Pools#obtain method return to requiring a Class parameter. Reflection is avoided by using pre-populated Pools for libgdx classes. See https://github.com/libgdx/libgdx/pull/7648 and https://github.com/libgdx/libgdx/pull/7678
- [BREAKING CHANGE] `JsonSkimmer` API changed to use JsonToken parameters.
- [BREAKING CHANGE] `JsonValue#last` added for O(1) append. Code that changes next may also need to change last.
- [BREAKING CHANGE] `JsonValue#get` is no longer case insensitive. Use `JsonValue#getIgnoreCase()`.
- [BREAKING CHANGE] `StringBuilder` has been deleted; its methods have been merged with `CharArray`.
- API Addition: Added `JsonValue#toJson` that takes a Writer.
- API Addition: Added `getProgrammaticChangeEvents()` to scene2d.ui actors that have `setProgrammaticChangeEvents()`.
- API Addition: Added `JsonMatcher`, extracts values with pattern matching.
- API Addition: Added `setUniform_iv` functions in `ShaderProgram` to set uniform integer arrays
- API Deprecation: Pools class is now deprecated and not used internally. Some functionality can be restored by using the new `PoolManager` class.
- API Fix: Fixed crashes when reading the soft buttons bar height on Android.
- API Addition: Multi sample FBOs can now be used with OpenGL ES 3.0+ instead of OpenGL ES 3.1+
- API Addition: Lwjgl3ApplicationConfiguration#useGlfwAsync
- API Addition: A Universal Tiled Map Loader
- API Fix: Allow Creation of HexagonTiledMapRenderer with empty TiledMap
- API Fix: Fixed a GWT incompatibility issue in the AtlasTmxMapLoader and AtlasTmjMapLoader 
- API Addition: Add a constructor taking a TextureData array to FileTextureArrayData
- API Fix: fix wrong x, y layer offset in HexagonalTiledMapRenderer
- API Addition: Added Template Object Support for TiledMaps
- API Addition: Added glBlendFuncSeparate support in RenderContext