@@ -25,7 +25,7 @@ public class DisabledIOSAudio implements IOSAudio {
 	}
 
 	@Override
-	public void willTerminate () {
+	public void dispose () {
 	}
 
 	@Override
