@@ -90,7 +90,7 @@ public class OALIOSAudio implements IOSAudio {
 	}
 
 	@Override
-	public void willTerminate () {
+	public void dispose () {
 	}
 
 	private void forceEndInterruption () {
